--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+1.2.1 - 29-08-2019 Small fix in test script
 1.2.0 - 24-08-2019 Changed timestamp to Unix/Epoch (s in stead of ms)
 1.1.1 - 24-08-2019 Fixed autodiscovery during login.
 1.1.0 - 21-07-2019 Autodiscovery via connect.plugwise.net added. DeviceInfo added. Bugfixes.
