--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
+1.6.0 - 08-12-2021 Added reversed P1 (Belgian meters). Improved test.
 1.5.0 - 23-11-2021 Fixed http(s) timeout.
 1.4.0 - 11-03-2020 Added network info and wifi scan (V3 only).
 1.3.0 - 30-08-2019 Added energy and gas historic logs retrieval. Added Smile reboot (V3 only).
